улучшение главной страницы

--- a/src/common/header/Header.module.scss
+++ b/src/common/header/Header.module.scss
@@ -54,6 +54,10 @@ $line: 36px;
         .noColored {
           color: $site-color-2;
         }
+
+        .logo{
+          height: 36px;
+        }
       }
     }
 
