--- a/src/modules/components/[0_grouped_0]-Manager/Gallery-status-view/Gallery-status-view.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Gallery-status-view/Gallery-status-view.module.scss
@@ -3,3 +3,38 @@
 .galleryStatusViewWrapper {
   color: $color-3;
 }
+
+body {
+  .modal_main {
+    position: absolute;
+    z-index: 12001;
+    background: $site-color-4;
+    border: 1px solid $site-color-5;
+    border-radius: 5px;
+    top: 32px;
+    left: 32px;
+    right: 32px;
+    bottom: 32px;
+    width: 1400px;
+    height: auto;
+    overflow: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+
+    .container {
+      padding: 8px;
+    }
+  }
+
+  .overlay_modal {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    z-index: 12002;
+    background: lighten($site-color-12, 20%);
+    animation: animationModal 0.35s both ease;
+  }
+}
