--- a/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
@@ -124,203 +124,20 @@ $table-parameter: 34;
 body {
   .modalMain {
     position: absolute;
-    z-index: 12001;
+    z-index: 98;
     background: $site-color-4;
     border: 1px solid $site-color-5;
     border-radius: 5px;
-    top: 8px;
-    left: 8px;
-    right: 8px;
-    bottom: 8px;
+    top: 48px;
+    left: 48px;
+    right: 48px;
+    bottom: 48px;
     width: auto;
     height: auto;
     overflow: auto;
 
-    .closeModal {
-      position: absolute;
-      top: 4px;
-      right: 4px;
-      width: auto;
-      max-width: 150px;
-      height: 36px;
-      padding: 0 12px;
-      line-height: 36px;
-      text-align: center;
-      outline: none;
-      background: $site-color-12;
-      border: 1px solid $site-color-5;
-      border-radius: 5px;
-      transition: all 0.25s ease-in-out;
-      color: $site-color-8;
-      cursor: pointer;
-      font-size: 14px;
-      z-index: 1;
-
-      &:hover,
-      &:focus,
-      &:active {
-        outline: none;
-        background: $site-color-1;
-      }
-    }
-
-    .cardWrapperManagerUser {
-      display: flex;
-      flex-direction: row;
-      width: 100%;
-      height: 100%;
-
-      .cardOne {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: auto;
-
-        .wrapperActionsAndIcon {
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-start;
-
-          .playerImage {
-            width: 150px;
-            min-width: 150px;
-            max-width: 150px;
-            height: 150px;
-            min-height: 150px;
-            max-height: 150px;
-            margin: 10px;
-            border: none;
-            border-radius: 8px;
-          }
-
-          .buttonSubmit {
-            width: auto;
-            height: 24px;
-            margin: 10px;
-            line-height: 24px;
-            text-align: center;
-            outline: none;
-            background: $site-color-12;
-            border: 1px solid $color-22;
-            border-radius: 3px;
-            transition: all 0.25s ease-in-out;
-            color: $site-color-8;
-            cursor: pointer;
-            font-size: 14px;
-
-            &:hover,
-            &:focus,
-            &:active {
-              outline: none;
-              background: $site-color-1;
-            }
-          }
-        }
-
-        .textContainer {
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-          height: auto;
-          padding: 5px 5px 5px 0;
-
-          .oneBlock {
-            display: flex;
-            flex-direction: row;
-            width: 100%;
-            min-width: 500px;
-            max-width: 1645px;
-            padding: 5px;
-            margin: 5px 5px 5px 0;
-            background: $site-color-12;
-            border: 1px solid $site-color-5;
-            border-radius: 5px;
-
-            .textDescriptionParagraph {
-              width: auto;
-              min-width: max-content;
-              height: 24px;
-              line-height: 24px;
-              font-weight: 400;
-              font-size: 16px;
-              color: $site-color-2;
-            }
-
-            .lime {
-              width: auto;
-              height: auto;
-              min-height: 24px;
-              max-height: none;
-              line-height: 24px;
-              font-weight: 400;
-              font-size: 16px;
-              margin-left: 5px;
-              color: $site-color-8;
-            }
-
-            input[type="date"] {
-              &::-webkit-calendar-picker-indicator {
-                transition: all 0.35s ease;
-                filter: invert(50%);
-                cursor: pointer;
-
-                &:hover {
-                  filter: invert(100%);
-                }
-              }
-            }
-
-            .inputUserRedactor {
-              width: auto;
-              min-width: 400px;
-              max-width: 1500px;
-              margin-left: 5px;
-              height: auto;
-              line-height: 24px;
-              min-height: 24px;
-              max-height: 200px;
-              font-weight: 400;
-              font-size: 16px;
-              padding: 0 6px 0 0;
-              outline: none;
-              border-radius: 3px;
-              border: none;
-              transition: all 0.35s ease;
-              color: $site-color-8;
-              background: transparent;
-
-              &:hover,
-              &:focus,
-              &:active {
-                outline: none;
-                border: none !important;
-              }
-
-              &:hover {
-                color: $site-color-10;
-              }
-
-              &:focus {
-                color: $site-color-10;
-                border: 1px solid $site-color-5 !important;
-              }
-
-            }
-
-            .viewRedactor {
-              width: 24px;
-              min-width: 24px;
-              max-width: 24px;
-              min-height: 24px;
-              line-height: 24px;
-              font-weight: 400;
-              font-size: 16px;
-              color: $site-color-10;
-              margin-left: auto;
-            }
-          }
-        }
-      }
+    &::-webkit-scrollbar {
+      width: 4px;
     }
 
     .cardLog {
@@ -328,6 +145,179 @@ body {
       flex-direction: row;
       justify-content: center;
       padding: 15px;
+    }
+
+    .app_info {
+      color: $site-color-8;
+      line-height: 24px;
+      height: 24px;
+      font-weight: 400;
+      font-size: 16px;
+      font-family: $fontCustom2;
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    .main_line_user {
+      display: flex;
+      flex-direction: row;
+
+      .ico_player {
+        width: 32px;
+        height: 32px;
+      }
+
+      .stroke_name {
+        color: $site-color-2;
+        line-height: 32px;
+        height: 32px;
+        margin-left: 8px;
+        font-weight: 400;
+        font-size: 15px;
+        font-family: $fontCustom2;
+
+        .span_display {
+          padding: 0 0 0 4px;
+          color: $site-color-8;
+          font-weight: inherit;
+          font-size: inherit;
+          font-family: inherit;
+        }
+      }
+    }
+
+    .stroke {
+      color: $site-color-2;
+      line-height: 1.5;
+      height: 24px;
+      font-weight: 400;
+      font-size: 14px;
+
+      .color {
+        padding: 0 0 0 4px;
+        color: $site-color-8;
+        font-weight: inherit;
+        font-size: inherit;
+        font-family: inherit;
+      }
+    }
+
+    .stroke_row {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      width: auto;
+      height: auto;
+
+      .label_name {
+        display: flex;
+        color: $site-color-2;
+        line-height: 24px;
+        height: 24px;
+        font-weight: 400;
+        font-size: 14px;
+      }
+
+      .input {
+        width: 100%;
+        height: 20px;
+        margin: 2px 0 2px 8px;
+        padding: 0 4px;
+        outline: none;
+        border: none;
+        border-radius: 4px;
+        background: $site-color-12;
+        transition: all 0.35s ease;
+        color: $site-color-8;
+
+        &:hover,
+        &:active,
+        &:focus {
+          background: $site-color-1;
+          color: $site-color-8;
+        }
+      }
+    }
+
+    .active_app {
+      display: flex;
+      flex-direction: column;
+      background: $site-color-12;
+      margin: 4px auto 4px auto;
+      width: 1600px;
+      height: auto;
+      border: 1px solid $site-color-5;
+      border-radius: 4px;
+      padding: 12px;
+
+      .wrapper_actions {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        .submit {
+          width: 200px;
+          height: 28px;
+          line-height: 28px;
+          text-align: center;
+          background: $site-color-12;
+          border: 1px solid $site-color-4;
+          border-radius: 4px;
+          transition: all 0.3s ease-in-out;
+          color: $site-color-8;
+          cursor: pointer;
+          font-size: 14px;
+
+          &:hover,
+          &:focus,
+          &:active {
+            background: $site-color-1;
+          }
+        }
+      }
+    }
+
+    .old_app {
+      display: flex;
+      flex-direction: column;
+      background: $site-color-12;
+      margin: 4px auto 16px auto;
+      width: 1300px;
+      height: auto;
+      border: 1px solid $site-color-5;
+      border-radius: 4px;
+      padding: 12px;
+    }
+
+    .description_user {
+      display: flex;
+      flex-direction: column;
+      margin-top: 8px;
+
+      .notes {
+        max-width: 1574px;
+        width: 100%;
+        line-height: 1.35;
+        height: auto;
+        min-height: 100px;
+        max-height: 400px;
+        resize: vertical;
+        margin: 4px 0 16px 0;
+        padding: 4px;
+        outline: none;
+        border: none;
+        border-radius: 4px;
+        background: $site-color-12;
+        transition: all 0.35s ease;
+        color: $site-color-8;
+
+        &:hover,
+        &:active,
+        &:focus {
+          background: $site-color-1;
+          color: $site-color-8;
+        }
+      }
     }
   }
 
@@ -337,8 +327,8 @@ body {
     right: 0;
     bottom: 0;
     position: fixed;
-    z-index: 12002;
-    background: lighten($site-color-12, 20%);
+    z-index: 99;
+    background: darken($site-color-12, 100%);
     animation: animationModal 0.35s both ease;
   }
 }
