--- a/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
@@ -38,6 +38,14 @@
       padding: 0 48px;
       width: 100%;
 
+      .user_update_statement {
+        margin: 12px auto 0 auto;
+        width: 300px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+      }
+
       .text {
         font-weight: 400;
         font-size: 18px;
