--- a/src/modules/components/button/Button.module.scss
+++ b/src/modules/components/button/Button.module.scss
@@ -14,6 +14,7 @@
   cursor: pointer;
   transition: all 0.35s ease;
   color: $site-color-2;
+  padding: 0 12px;
 
   &:hover {
     color: $site-color-1;
