--- a/src/modules/pages/gallery/Gallery.module.scss
+++ b/src/modules/pages/gallery/Gallery.module.scss
@@ -40,6 +40,7 @@
     justify-content: center;
     width: 100%;
     height: auto;
+    min-height: 80vh;
     padding: 0 8px;
     border: 1px solid $site-color-5;
     background: $site-color-4;
@@ -304,7 +305,7 @@ body {
         flex-direction: column;
         justify-content: space-around;
         margin-left: 10px;
-        width: auto;
+        width: 100%;
         height: 100%;
 
         .titleNameImageList {
@@ -328,6 +329,7 @@ body {
           color: $site-color-2;
           font-family: $fontCustom2;
           line-height: 1.25;
+          margin: 16px auto;
         }
 
         .blockTag {
