added some text

--- a/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
@@ -39,7 +39,7 @@
       width: 100%;
 
       .user_update_statement {
-        margin: 12px auto 0 auto;
+        margin: 12px auto 8px auto;
         width: 300px;
         display: flex;
         flex-direction: row;
