фикс хидера + падинг

--- a/src/modules/components/[0_grouped_0]-Profile/shops-user/ShopUser.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/shops-user/ShopUser.module.scss
@@ -232,6 +232,8 @@
 
 @media screen and (max-width: 480px) {
   .shop_wrapper {
+    padding-top: 8px;
+
     .all_shop {
       .one_shop_wrapper {
         .villager_image {
