--- a/src/modules/pages/support/Support.module.scss
+++ b/src/modules/pages/support/Support.module.scss
@@ -163,6 +163,82 @@
         }
       }
     }
+
+    .current_donate_block {
+      height: auto;
+      max-width: 80%;
+      display: flex;
+      flex-direction: column;
+      margin: 16px auto;
+      padding: 16px;
+      background: $site-color-4;
+      border: 1px solid $site-color-5;
+      border-radius: 8px;
+
+      .current_title {
+        font-size: 18px;
+        font-family: $fontCustom2;
+        color: $site-color-2;
+        font-weight: 400;
+        text-align: center;
+        height: 28px;
+        line-height: 28px;
+      }
+
+      .information_block {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        margin-top: 12px;
+
+        .text {
+          height: auto;
+          line-height: 1.4;
+          color: $site-color-2;
+          font-weight: 400;
+          font-size: 14px;
+          font-family: $fontCustom2;
+          margin: 4px 0;
+        }
+
+        .list {
+          display: flex;
+          flex-direction: column;
+          padding-left: 8px;
+          margin: 4px 0;
+
+          .stroke {
+            height: auto;
+            line-height: 1.5;
+            color: $site-color-2;
+            font-weight: 400;
+            font-size: 13px;
+            font-family: $fontCustom2;
+          }
+        }
+
+        .link_site {
+          font-weight: inherit;
+          width: auto;
+          height: inherit;
+          line-height: inherit;
+          font-size: inherit;
+          color: $site-color-10;
+          transition: all 0.35s ease;
+          text-decoration: none;
+          margin-left: 4px;
+
+          &:visited,
+          &:active {
+            color: $site-color-10;
+          }
+
+          &:hover {
+            color: $color-12;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -182,6 +258,14 @@
 }
 
 @media screen and (max-width: 1280px) {
+  .mainSupport {
+    .support {
+      .current_donate_block {
+        margin-top: 32px;
+        max-width: 95%;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -255,6 +339,24 @@
         }
       }
 
+      .current_donate_block {
+        .current_title {
+          font-size: 16px;
+        }
+
+        .information_block {
+          .text {
+            font-size: 13px;
+          }
+
+          .list {
+            .stroke {
+              font-size: 12px;
+            }
+          }
+        }
+      }
+
       .monitoringBlock {
         width: 94%;
         margin: 65px auto 65px auto;
@@ -287,6 +389,10 @@
           }
         }
       }
+
+      .current_donate_block {
+        padding: 12px;
+      }
     }
   }
 }
@@ -312,6 +418,10 @@
             max-width: 350px;
           }
         }
+      }
+
+      .current_donate_block {
+        padding: 8px;
       }
 
       .monitoringBlock {
