--- a/src/modules/pages/support/Support.module.scss
+++ b/src/modules/pages/support/Support.module.scss
@@ -197,7 +197,6 @@
           color: $site-color-2;
           font-weight: 400;
           font-size: 14px;
-          font-family: $fontCustom2;
           margin: 4px 0;
         }
 
@@ -205,7 +204,8 @@
           display: flex;
           flex-direction: column;
           padding-left: 8px;
-          margin: 4px 0;
+          margin: 4px 0 4px 16px;
+          list-style: disc;
 
           .stroke {
             height: auto;
@@ -213,7 +213,6 @@
             color: $site-color-2;
             font-weight: 400;
             font-size: 13px;
-            font-family: $fontCustom2;
           }
         }
 
