--- a/src/modules/pages/shopkeepers/Shopkeepers.module.scss
+++ b/src/modules/pages/shopkeepers/Shopkeepers.module.scss
@@ -28,6 +28,7 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
+  padding: 0 16px;
 
   .title_shop_block {
     width: 100%;
@@ -59,83 +60,90 @@
     .shop_list_wrapper {
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      width: 300px;
-      height: min-content;
-      max-height: 770px;
-      min-height: min-content;
-      border: 1px solid $site-color-5;
-      border-radius: 6px;
-      background: $site-color-12;
+      width: auto;
+      height: auto;
+      max-height: 88vh;
       position: sticky;
       top: 75px;
-      transition: height 0.35s ease;
 
-      .search_shop {
-        width: 100%;
-        height: 32px;
-        outline: none;
-        background: $site-color-12;
-        border: none;
-        border-radius: 6px 6px 0 0;
-        transition: all 0.25s ease-in-out;
-        color: $site-color-8;
-        padding-left: 10px;
-        padding-right: 10px;
-
-        &:hover,
-        &:focus,
-        &:active {
-          outline: none;
-          background: $site-color-1;
-        }
-      }
-
-      .ul_block {
+      .shop_list_box {
         display: flex;
         flex-direction: column;
-        width: 100%;
+        justify-content: flex-start;
+        width: 300px;
         height: auto;
-        max-height: 680px;
-        min-height: max-content;
-        padding: 8px 4px;
-        overflow: auto;
-        border-top: 1px solid $site-color-5;
+        max-height: 80vh;
+        min-height: auto;
+        border: 1px solid $site-color-5;
+        border-radius: 6px;
+        background: $site-color-12;
+        transition: height 0.35s ease;
 
-        &::-webkit-scrollbar {
-          width: 4px !important;
+        .search_shop {
+          width: 100%;
+          height: 32px;
+          min-height: 32px;
+          max-height: 32px;
+          outline: none;
+          background: $site-color-12;
+          border: none;
+          border-radius: 6px 6px 0 0;
+          transition: all 0.25s ease-in-out;
+          color: $site-color-8;
+          padding-left: 10px;
+          padding-right: 10px;
+
+          &:hover,
+          &:focus,
+          &:active {
+            outline: none;
+            background: $site-color-1;
+          }
         }
 
-        .one_shop_list_line {
+        .ul_block {
           display: flex;
-          flex-direction: row;
+          flex-direction: column;
           width: 100%;
           height: auto;
+          padding: 8px 4px;
+          overflow: auto;
+          border-top: 1px solid $site-color-5;
 
-          .one_line {
-            color: $site-color-2;
-            font-family: $fontCustom2;
-            font-size: 14px;
-            height: 28px;
-            line-height: 28px;
-            width: 100%;
-            padding: 0 8px;
-            transition: all 0.35s ease;
-            border-radius: 4px;
-
-            &:hover {
-              background: $site-color-1;
-            }
+          &::-webkit-scrollbar {
+            width: 4px !important;
           }
 
-          .active {
-            color: $site-color-9 !important;
+          .one_shop_list_line {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            height: auto;
+
+            .one_line {
+              color: $site-color-2;
+              font-family: $fontCustom2;
+              font-size: 14px;
+              height: 28px;
+              line-height: 28px;
+              width: 100%;
+              padding: 0 8px;
+              transition: all 0.35s ease;
+              border-radius: 4px;
+
+              &:hover {
+                background: $site-color-1;
+              }
+            }
+
+            .active {
+              color: $site-color-9 !important;
+            }
           }
         }
       }
 
       .scroll {
-        border-top: 1px solid $site-color-5;
         display: flex;
         flex-direction: column;
         padding: 8px 24px;
@@ -187,6 +195,7 @@
       display: flex;
       justify-content: flex-start;
       flex-direction: column;
+      min-width: 618px;
       width: 100%;
       min-height: 100%;
       max-width: 638px;
@@ -242,4 +251,31 @@
       }
     }
   }
+}
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
 }
