--- a/src/modules/components/[0_grouped_0]-Shopkeepers/one-suggestions/One-suggestions.module.scss
+++ b/src/modules/components/[0_grouped_0]-Shopkeepers/one-suggestions/One-suggestions.module.scss
@@ -39,3 +39,34 @@
     max-width: 100px;
   }
 }
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+  .one_suggestions_block {
+    min-width: 360px;
+    max-width: 360px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
+}
