--- a/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
@@ -63,7 +63,6 @@
 
       .status {
         position: absolute;
-        background: $site-color-8;
         left: 0;
         top: 18%;
         z-index: 1;
@@ -73,6 +72,15 @@
         font-family: $fontCustom2;
         opacity: 0.8;
         color: $site-color-4;
+        min-width: 160px;
+      }
+
+      .green {
+        background: $site-color-8;
+      }
+
+      .red {
+        background: $site-color-11;
       }
 
       .wrapper_image {
