--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -455,6 +455,7 @@ body {
     width: auto;
     height: auto;
     overflow: auto;
+    outline: none;
 
     &::-webkit-scrollbar {
       width: 4px;
