--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -35,6 +35,7 @@ $site-color-9: rgba(255, 180, 0, 1); // цвета
 $site-color-10: rgba(228, 0, 127, 1); // цвета
 $site-color-11: rgba(255, 0, 0, 1); // цвета
 $site-color-12: rgba(17, 17, 20, 0.5); // поле в модалке какой то
+$site-color-13: rgb(0, 0, 0); // фон модалки
 
 $fontCustom1: "Minecraft Title Cyrillic";
 $fontCustom2: "Minecraft Rus";
