--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -34,11 +34,6 @@
           width: auto;
           height: auto;
           margin-bottom: 8px;
-          transition: all 0.35s ease;
-
-          &:hover {
-            background: $site-color-12;
-          }
 
           input {
             display: none;
@@ -92,6 +87,11 @@
               display: flex;
               flex-direction: column;
               justify-content: center;
+              transition: all 0.35s ease;
+
+              &:hover {
+                background: $site-color-12;
+              }
 
               svg {
                 max-width: 110px;
@@ -114,7 +114,7 @@
 
               svg {
                 path {
-                  stroke: $site-color-9;
+                  stroke: rgba($site-color-2, 0.5);
                 }
               }
             }
@@ -445,13 +445,7 @@ body {
   .modal_main_image_redactor {
     position: absolute;
     z-index: 10098;
-    background: $site-color-4;
-    border: 1px solid $site-color-5;
     border-radius: 5px;
-    top: 2%;
-    left: 4%;
-    right: 4%;
-    bottom: 2%;
     width: auto;
     height: auto;
     overflow: auto;
@@ -464,15 +458,9 @@ body {
     .box_image_redactor {
       display: flex;
       flex-direction: column;
-      width: 100%;
-      max-width: 1500px;
-      height: 100%;
+      width: auto;
+      height: auto;
       margin: 0 auto;
-
-      img {
-        max-width: 1500px;
-
-      }
     }
   }
 
@@ -482,8 +470,12 @@ body {
     right: 0;
     bottom: 0;
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     z-index: 10099;
-    background: darken($site-color-12, 100%);
+    background: $site-color-13;
   }
 }
 
