--- a/src/modules/components/image-editor/local/navigation/Navigation.module.scss
+++ b/src/modules/components/image-editor/local/navigation/Navigation.module.scss
@@ -9,6 +9,11 @@
   justify-content: space-between;
   position: relative;
 
+  .upload {
+    display: none;
+    left: -8000px;
+  }
+
   .box_actions {
     display: flex;
     align-items: center;
